<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="register.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/R_img_1"
        />

    <ImageView
        android:id="@+id/back_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/R_img_1"
        android:text="Welcome Onbard!"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinssemibold"
        android:textColor="@color/black"
        android:id="@+id/R_txt_1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/R_txt_1"
        android:text="Let’s help you meet up your tasks."
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/black"
        android:id="@+id/R_txt_2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/R_txt_2"
        android:padding="30dp"
        android:id="@+id/ly_1"
        >

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="@string/R_FullName"
            android:paddingLeft="10dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:maxLines="1"
            android:inputType="text"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="57dp"
            android:hint="@string/R_Email"
            android:paddingLeft="10dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="57dp"
            android:hint="@string/R_Password"
            android:paddingLeft="10dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/edt_conf_password"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="57dp"
            android:hint="@string/R_conf_Password"
            android:paddingLeft="10dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <Button
        android:id="@+id/R_btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_1"
        android:layout_centerHorizontal="true"
        android:width="300dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/btn_Register"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/R_btn_1"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_login_btn"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="12sp"
            android:textColor="@color/secondaryColor"
            />

    </LinearLayout>

</RelativeLayout>